--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
 
 #main_wrapper
 {
-    margin-left: 180px; /* Same as the width of the sidebar */
+    margin-left: 0px;
     padding: 0px 10px;
 }
 
@@ -156,7 +156,7 @@ form {
 }
 
 .left_box{
-    width:80%;
+    width:100%;
     float: left;
     margin-left: 20px;
     border: 1px solid #DEDEDE;
@@ -333,7 +333,7 @@ th {
 @media only screen and (min-width : 1025px) {
     /* ipad pro + landscape */
     .left_box {
-        width: 70%;
+        width: 100%;
         margin-left: 0px;
     }
 
@@ -478,6 +478,11 @@ th {
         margin-left: 0px;
     }
 
+    .menu_box{
+        width: 100%;
+        margin-left: 0px;
+    }
+
 }
 
 @media all and (min-width:0px) and (max-width: 320px) {
@@ -537,4 +542,55 @@ th {
 .circle.plus:after{
     margin: auto 2px;
     height: 2px;
+}
+
+/* collapsible menu */
+.menu-content {
+    font-family: 'Oswald', sans-serif; 
+    padding: 0 0 0 50px;
+}
+.collapsible-menu {
+    background-color: rgb(255, 255, 255);
+    padding: 0px 30px;
+    border-bottom: 3px solid #CDE700;
+    box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+}
+.collapsible-menu ul {
+    list-style-type: none;
+    padding: 0;
+}
+.collapsible-menu a {
+    display:block;
+    padding: 10px;
+    text-decoration: none;
+}
+
+.collapsible-menu label {
+    font-family: 'Sedgwick Ave Display', cursive;
+    font-size: 40px;
+    display: block;
+    cursor: pointer;
+    background: url(../img/icons/menu.png) no-repeat left center;
+    padding: 10px 0 10px 50px;
+}
+input#menu {
+    display: none;
+}
+
+input:checked +label {
+    background-image: url(../img/icons/close.png);
+}
+
+.menu-content {
+    max-height: 0;
+    overflow: hidden;
+    font-family: 'Oswald', sans-serif; 
+    padding: 0 0 0 50px;
+}
+/* Toggle Effect */
+input:checked ~ label {
+    background-image: url(../img/icons/close.png);
+}
+input:checked ~ .menu-content {
+    max-height: 100%;
 }
