--- a/css/styles.css
+++ b/css/styles.css
@@ -626,3 +626,13 @@ input:checked ~ label {
 input:checked ~ .menu-content {
     max-height: 100%;
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #f5f5f5;
+    color: #3a3a3a;
+    text-align: center;
+}
