--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 body {
     margin: 0;
     font-size: 22px;
+    min-height: 400px;
+    margin-bottom: 100px;
+    clear: both;
 }
 
 #main_wrapper
